--- a/CSS/index.css
+++ b/CSS/index.css
@@ -57,7 +57,7 @@ section#t1 .container {
     margin: 0 auto;
     width: 50%;
     min-width: 280px;
-    border: solid 3px #5B2C0C;
+    border: solid 2px #5B2C0C;
 }
 .pat30{
     padding-top:30px ;
@@ -119,9 +119,19 @@ section#t1 .row .col-md-7 img {
 section#t2 {
     width: 100%;
     /* background-color: #BD9778; */
-    background-color: #D2DAE0;
+    background-color: #A06437;
     /* 更改背景顏色 */
 }
+
+section#t2 .title{
+    border:solid 2px white ;
+}
+
+section#t2 .title_text{
+    color: white;
+    
+}
+
 section#t2 .row img{
     width: 100%;
    
@@ -129,8 +139,8 @@ section#t2 .row img{
 
 section#t2 .row .picsize{
     width: 100%;
-    height: 905px;
-  
+    /* height: 905px; */
+  height: 812px;
     background-size: cover;
     overflow: hidden;
 }
@@ -272,6 +282,15 @@ section#t4{
     /* 更改背景顏色 */
 }
 
+/* 標題格式 */
+section#t4 .title{
+    border: solid 2px white;
+}
+
+section#t4 .title_text{
+    color:white;
+}
+
 
 /* 票價資訊 */
 section#t4 .container .t4-t {
@@ -347,7 +366,7 @@ section#t4 .container .t1-text .t4-c2{
 /* ------------section#t5-最新消息----------------- */
 section#t5{
     width: 100%;
-    background-color: #DCC0AA;
+    background-color: #F2ECE7;
     /* 更改背景顏色 */
 }
 section#t5 .row #t5_img img{
@@ -390,7 +409,7 @@ section#t5 .row .Card_text span:hover{
 
 
 section#t5 .row .Card_text .more{
-    font-size: 8px;
+    font-size: 14px;
     padding: 0 3px;
     border-radius: 3px;
     /* background-color: black; */
@@ -403,7 +422,7 @@ section#t5 .row .Card_text .more{
 }
 
 section#t5 .row .Card_text .more:hover{
-    font-size: 8px;
+    font-size: 14px;
     padding: 0 3px;
     border-radius: 3px;
     background-color: black;
@@ -414,6 +433,99 @@ section#t5 .row .Card_text .more:hover{
     /* border: solid 1px black; */
      /* 標題上的more 更多內容 */
 }
+
+/* 測試-更多內容特效 */
+.mh7{
+    color: rgba(255,255,255,1);
+    
+    transition: all 0.5s;
+    border: 1px solid rgba(0,0,0,0.5);
+    position: relative; 
+    }
+    
+    .mh7 span{
+    z-index: 2; 
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;   
+    }
+    .mh7:before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0%;
+    height: 100%;
+    z-index: 1;
+    opacity: 0;
+    background-color: rgba(139, 136, 136, 0.644);
+    transition: all 0.3s;
+    
+    }
+    .mh7:hover::before{
+    opacity: 1;
+    width: 100%;
+    color: white;
+    }
+
+
+/* 更多消息格式 */
+section#t5 .news{
+    font-size: 23px;
+    /* padding: 0 3px; */
+    border-radius: 3px;
+    background-color: #5B2C0C;
+    color: white;
+    
+    letter-spacing: 2px;
+    margin: auto;
+    padding: 6px 10px 6px 12px;
+    
+}
+section#t5 a{
+    text-decoration: none;
+}
+
+
+/* 測試-更多消息特效-失敗 */
+.mh3 {
+	color: rgba(255,255,255,1);
+	-webkit-transition: all 0.5s;
+	-moz-transition: all 0.5s;
+	-o-transition: all 0.5s;
+	transition: all 0.5s;
+	position: relative;
+	border: 1px solid rgba(255,255,255,0.5);
+	overflow: hidden;
+}
+
+
+.mh3:hover > span{
+	opacity: 0;
+	-webkit-transform: translate(0px,40px);
+	transform: translate(0px,40px);
+}
+.mh3::after{
+	content: attr(data-text);
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	line-height: 50px;
+	top: 0;
+	left: 0;
+	opacity: 0;
+	-webkit-transform: translate(-30%, 0);
+	transform: translate(-30%, 0);
+	transition: all 0.3s;   
+}
+
+.mh3:hover::after{
+	opacity: 1;
+	-webkit-transform: translate(0, 0);
+	transform: translate(0, 0);
+}
+/* ---------------------------------------------- */
 
 .mart30{
     margin-top: 30px;
