--- a/CSS/index copy.css
+++ b/CSS/index copy.css
@@ -132,28 +132,28 @@ section#t2 .title_text{
     
 }
 
-section#t2 .row img{
+section#t2  img{
     width: 100%;
    
 }
 
-section#t2 .row .picsize{
+section#t2  .picsize{
     width: 100%;
     /* height: 905px; */
-  height: 812px;
+    height: 812px;
     background-size: cover;
     overflow: hidden;
 }
 
-section#t2 .row .t2-pic1{
+section#t2  .t2-pic1{
     background-image: url(../img/t2-1xxxxx.jpg);
     /* background-attachment: fixed; */
 }
-section#t2 .row .t2-pic2{
+section#t2  .t2-pic2{
     background-image: url(../img/t2-2xx.jpg);
 }
 
-section#t2 .row .t2-pic3{
+section#t2  .t2-pic3{
     background-image: url(../img/t2-3xx.jpg);
 }
 
@@ -179,7 +179,7 @@ section#t2 .row .t2-pic3{
     padding-left: 0;
 }
 
-section#t2 .row .mask{
+section#t2  .mask{
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.7);
@@ -193,12 +193,12 @@ section#t2 .row .mask{
     
 }
 
-section#t2 .row .mask h2{
+section#t2  .mask h2{
     padding: 50px;
     text-align: center;
 }
 
-section#t2 .row .mask p{
+section#t2  .mask p{
     font-size: 24px;
     padding: 0 50px;
     text-align: center;
@@ -206,7 +206,7 @@ section#t2 .row .mask p{
     
 }
 
-section#t2 .row .mask:hover{
+section#t2  .mask:hover{
     top: 0PX;
     color: white;
     flex-wrap: wrap;
@@ -216,7 +216,31 @@ section#t2 .row .mask:hover{
     padding: 50px;
     
 }
+.swiper-container {
+    overflow: hidden;
+    margin-top: 30px;
+    width: 100%;
+    height: 100%;
+  }
+.swiper-slide {
 
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+  }
+.swiper-container img{
+    width: 500px;
+}
 
 
 
