--- a/CSS/index.css
+++ b/CSS/index.css
@@ -160,6 +160,7 @@ section#t2  img{
 }
 
 .swiper-container {
+    max-height: 480px;
     overflow: hidden;
     margin-top: 30px;
     width: 100%;
@@ -212,6 +213,11 @@ section#t2  img{
     padding: 15px;
 }
 
+@media(max-width:540px){
+    .swiper-container {
+        max-height: 480px;
+    }
+}
 /* -------------section#t3-景點文化 ----------------*/
 
 section#t3 .row{
