--- a/CSS/index.scss
+++ b/CSS/index.scss
@@ -478,7 +478,7 @@ section#Portfolio {
         
                     display: flex;
                     justify-content: center;
-                    // align-items: center;
+                    align-items: center;
                     align-content: center;
                     // opacity: 0;
                     transition: 0.3s;
@@ -493,7 +493,7 @@ section#Portfolio {
                         color: white;
                         text-align: center;
                         text-shadow: 0.1em 0.1em 0.2em black !important ;
-                        
+                        margin: auto;
                         
                     
                         
