--- a/style/index.css
+++ b/style/index.css
@@ -440,6 +440,10 @@ section#Portfolio #Portfolio-all .container .hug .mask {
   -webkit-justify-content: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-align-content: center;
       -ms-flex-line-pack: center;
           align-content: center;
@@ -459,6 +463,7 @@ section#Portfolio #Portfolio-all .container .hug .mask p {
   color: white;
   text-align: center;
   text-shadow: 0.1em 0.1em 0.2em black !important;
+  margin: auto;
 }
 
 section#Portfolio #Portfolio-all .container .hug .mask:hover {
