--- a/style/index.css
+++ b/style/index.css
@@ -19,6 +19,36 @@ body {
   font-family: "微軟正黑體";
 }
 
+.section {
+  text-align: center;
+  font-size: 3em;
+}
+
+#pallax {
+  background-attachment: fixed;
+}
+
+.ml9 {
+  position: relative;
+}
+
+.ml9 .text-wrapper {
+  position: relative;
+  display: inline-block;
+  padding-top: 0.2em;
+  padding-right: 0.5em;
+  padding-bottom: 0.5em;
+  overflow: hidden;
+}
+
+.ml9 .letter {
+  -webkit-transform-origin: 50% 100%;
+      -ms-transform-origin: 50% 100%;
+          transform-origin: 50% 100%;
+  display: inline-block;
+  line-height: 1em;
+}
+
 .banner {
   width: 100%;
   height: 100vh;
@@ -91,6 +121,7 @@ section#aboutme .abme-title h1 {
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
+  background-attachment: fixed;
 }
 
 section#aboutme {
@@ -151,6 +182,7 @@ section#aboutme .PC_window .A_inbox {
   right: 200px;
   text-decoration: none;
   color: black;
+  cursor: pointer;
 }
 
 section#aboutme .PC_window .A_inbox .arrow {
@@ -287,8 +319,8 @@ section#aboutme .Phone_window .A_inbox:hover:after {
   width: 50%;
   margin: auto;
   color: white;
-  line-height: 48px;
-  font-size: 24px;
+  line-height: 40px;
+  font-size: 22px;
 }
 
 /* The Close Button */
@@ -309,7 +341,7 @@ section#aboutme .Phone_window .A_inbox:hover:after {
 
 .close:hover,
 .close:focus {
-  color: #ce2020;
+  color: #ffbf0e;
   text-decoration: none;
   cursor: pointer;
 }
@@ -367,7 +399,7 @@ section#aboutme .Phone_window .A_inbox:hover:after {
 
 .closep:hover,
 .closep:focus {
-  color: #ce2020;
+  color: #ffbf0e;
   text-decoration: none;
   cursor: pointer;
 }
@@ -421,6 +453,7 @@ section#Portfolio #Portfolio-all .container .hug {
   overflow: hidden;
   width: 100%;
   height: 400px;
+  cursor: pointer;
 }
 
 section#Portfolio #Portfolio-all .container .hug .pic {
@@ -498,7 +531,7 @@ section#Portfolio #Portfolio-all .container .ai-pic {
 section#Portfolio #Portfolio-all .container .html-pic {
   background-image: url(../img/htmlcj.jpg);
   background-size: cover;
-  background-position: center;
+  background-position: top;
 }
 
 section#Portfolio #Portfolio-all .container .pic:hover {
@@ -510,9 +543,66 @@ section#Portfolio #Portfolio-all .container .pic:hover {
   transition: all 0.5s ease 0s;
 }
 
+@media (max-width: 768px) {
+  section#Portfolio #Portfolio-all .container .hug {
+    min-height: 350px;
+    margin-top: 0px;
+  }
+  section#Portfolio #Portfolio-all .container .ps-pic {
+    background-image: url(../img/Photoshop-ipad.jpg);
+  }
+  section#Portfolio #Portfolio-all .container .ai-pic {
+    background-image: url(../img/Illustraor-ipad.jpg);
+  }
+  section#Portfolio #Portfolio-all .container .html-pic {
+    background-image: url(../img/htmlcj-ipad.jpg);
+  }
+}
+
+@media (max-width: 568px) {
+  section#Portfolio #Portfolio-all .container .hug {
+    min-height: 350px;
+  }
+  section#Portfolio #Portfolio-all .container .ps-pic {
+    background-image: url(../img/Photoshop-iphone.jpg);
+  }
+  section#Portfolio #Portfolio-all .container .ai-pic {
+    background-image: url(../img/Illustraor-iphone.jpg);
+  }
+  section#Portfolio #Portfolio-all .container .html-pic {
+    background-image: url(../img/htmlcj-iphone.jpg);
+  }
+}
+
+@media (max-width: 768px) {
+  section#Portfolio #Portfolio-all .container {
+    max-width: unset;
+    padding: 0px 0px;
+  }
+}
+
+@media (max-width: 568px) {
+  section#Portfolio #Portfolio-all .container {
+    padding: 0px 0px;
+  }
+}
+
 section#Portfolio-ps h2 {
-  padding: 100px 200px 0px 200px;
+  width: 100%;
+  padding: 100px 0px 50px 200px;
   font-size: 64px;
+  margin-bottom: 50px;
+  font-weight: bolder;
+}
+
+@media (max-width: 992px) {
+  section#Portfolio-ps h2 {
+    width: 100%;
+    text-align: center;
+    padding: 50px 0px 0px 50px;
+    margin: auto;
+    margin-bottom: 30px;
+  }
 }
 
 @media (max-width: 576px) {
@@ -717,20 +807,38 @@ section#Portfolio-ps .container-fluid .row #PS-text3 {
 
 section#Portfolio-AI {
   padding-bottom: 100px;
-  background-color: #f78585;
 }
 
-section#Portfolio-AI h2 {
-  padding: 100px 200px 0px 200px;
+section#Portfolio-AI .bgc-ai {
+  margin-top: 200px;
+  background-color: #e9b7b7;
+  padding-bottom: 100px;
+}
+
+section#Portfolio-AI .bgc-ai h2 {
+  width: 100%;
+  padding: -0px 0px 100px 200px;
   font-size: 64px;
-  margin-bottom: 50px;
+  font-weight: bolder;
+  margin-top: -50px;
+}
+
+@media (max-width: 992px) {
+  section#Portfolio-AI .bgc-ai h2 {
+    width: 100%;
+    text-align: center;
+    padding: 50px 0px 0px 50px;
+    margin: auto;
+    margin-bottom: 30px;
+  }
 }
 
 @media (max-width: 576px) {
-  section#Portfolio-AI h2 {
-    font-size: 30px;
-    padding: 50px 0px 30px 0px;
+  section#Portfolio-AI .bgc-ai h2 {
+    font-size: 36px;
+    padding: 50px 0px 0px 50px;
     margin: auto;
+    margin-bottom: 30px;
   }
 }
 
@@ -767,22 +875,35 @@ section#Portfolio-AI .swiper-slide img {
   width: 100%;
 }
 
-section#Portfolio-web {
-  background-color: #4a4747;
+section#Portfolio-web .bgc-web {
+  background-color: #9b8888;
+  padding-bottom: 100px;
 }
 
-section#Portfolio-web h2 {
-  padding: 100px 200px 0px 200px;
-  font-size: 56px;
+section#Portfolio-web .bgc-web h2 {
+  width: 100%;
+  padding: 0px 0px 100px 150px;
   font-size: 64px;
-  margin-bottom: 50px;
+  font-weight: bolder;
+  margin-top: -50px;
+}
+
+@media (max-width: 992px) {
+  section#Portfolio-web .bgc-web h2 {
+    width: 100%;
+    text-align: center;
+    padding: 50px 0px 0px 50px;
+    margin: auto;
+    margin-bottom: 30px;
+  }
 }
 
 @media (max-width: 576px) {
-  section#Portfolio-web h2 {
-    font-size: 28px;
-    padding: 50px 0px 0px 0px;
+  section#Portfolio-web .bgc-web h2 {
+    font-size: 36px;
+    padding: 50px 0px 0px 50px;
     margin: auto;
+    margin-bottom: 30px;
   }
 }
 
@@ -815,7 +936,7 @@ section#Portfolio-web .row .text {
 }
 
 section#Portfolio-web .row .text h3 {
-  color: white;
+  color: #2a2a2a;
   padding: 50px 0px 0px 50px;
   font-size: 36px;
   font-weight: 600;
@@ -841,6 +962,9 @@ section#Portfolio-web .row .text .QRcode {
 section#Portfolio-web .row .text .QRcode .pic {
   width: 195px;
   height: 195px;
+}
+
+section#Portfolio-web .row .text .QRcode .horseQR {
   background-image: url(../img/horse-QRcode.png);
   background-repeat: no-repeat;
   background-size: cover;
@@ -882,6 +1006,7 @@ section#Portfolio-web .row .webpic2 {
   background-image: url(../img/web-pic2.jpg);
   background-size: cover;
   background-repeat: repeat;
+  background-position: top center;
   margin-top: 50px;
 }
 
@@ -907,16 +1032,507 @@ section#Portfolio-web .row .text .QRcode {
   text-align: end;
 }
 
-@media (max-width: 991px) {
-  section#Portfolio-web .row .webpic1 {
-    background-size: contain;
-    background-position: center;
-  }
+section#Portfolio-web .row .text .QRcode .pic {
+  width: 195px;
+  height: 195px;
+}
+
+section#Portfolio-web .row .text .QRcode .teamQR {
+  background-image: url(../img/team-QRcode.png);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 @media (max-width: 991px) {
   section#Portfolio-web .row {
     padding: 0px 5px;
+  }
+}
+
+#workexperiece .title {
+  width: 100%;
+  height: 100vh;
+  background-color: #3a3a3a;
+  font-size: 64px;
+  color: #f0c6c6;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@media (max-width: 568px) {
+  #workexperiece .title {
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.4);
+    font-size: 36px;
+    color: #f0c6c6;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.wrapper {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-flow: row wrap;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.card {
+  width: 420px;
+  height: 340px;
+  margin: 1em;
+  -webkit-perspective: 1500px;
+          perspective: 1500px;
+}
+
+.card .content {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+  -webkit-transition: -webkit-transform 0.8s cubic-bezier(0.75, 0, 0.85, 1);
+  transition: -webkit-transform 0.8s cubic-bezier(0.75, 0, 0.85, 1);
+  -o-transition: transform 0.8s cubic-bezier(0.75, 0, 0.85, 1);
+  transition: transform 0.8s cubic-bezier(0.75, 0, 0.85, 1);
+  transition: transform 0.8s cubic-bezier(0.75, 0, 0.85, 1), -webkit-transform 0.8s cubic-bezier(0.75, 0, 0.85, 1);
+}
+
+.more {
+  display: none;
+}
+
+.more:checked ~ .content {
+  -webkit-transform: rotateY(180deg);
+          transform: rotateY(180deg);
+}
+
+.front,
+.back {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+  border-radius: 6px;
+}
+
+.front .inner,
+.back .inner {
+  height: 100%;
+  display: -ms-grid;
+  display: grid;
+  padding: 1.5em;
+  -webkit-transform: translateZ(80px) scale(0.94);
+          transform: translateZ(80px) scale(0.94);
+}
+
+.front {
+  background-color: #fff;
+  background-size: cover;
+  background-position: center center;
+  background-image: url();
+}
+
+.front:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: block;
+  border-radius: 6px;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+  background: -webkit-linear-gradient(50deg, rgba(12, 14, 13, 0.7), rgba(228, 61, 49, 0.7));
+  background: -o-linear-gradient(50deg, rgba(12, 14, 13, 0.7), rgba(228, 61, 49, 0.7));
+  background: linear-gradient(40deg, rgba(12, 14, 13, 0.7), rgba(228, 61, 49, 0.7));
+}
+
+.front .inner {
+  -ms-grid-rows: 5fr 1fr 1fr 2fr 1fr;
+      grid-template-rows: 5fr 1fr 1fr 2fr 1fr;
+  justify-items: center;
+}
+
+.front h2 {
+  -ms-grid-row: 2;
+  grid-row: 2;
+  margin-bottom: 0.3em;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  color: #fff;
+  font-weight: 500;
+  text-shadow: 0 0 6px rgba(0, 0, 0, 0.1);
+}
+
+.front .rating {
+  -ms-grid-row: 3;
+  grid-row: 3;
+  color: rgba(255, 255, 255, 0.8);
+  font-size: 14px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-flow: row nowrap;
+      -ms-flex-flow: row nowrap;
+          flex-flow: row nowrap;
+}
+
+.front .rating i {
+  margin: 0 1px;
+}
+
+.WEcard1 {
+  background-image: url(../img/WEcard1.jpg);
+}
+
+.WEcard2 {
+  background-image: url(../img/WEcard2.jpg);
+}
+
+.WEcard3 {
+  background-image: url(../img/WEcard3.jpg);
+}
+
+.WEcard4 {
+  background-image: url(../img/WEcard4.jpg);
+}
+
+.WEcard5 {
+  background-image: url(../img/WEcard5.jpg);
+}
+
+.back {
+  -webkit-transform: rotateY(180deg);
+          transform: rotateY(180deg);
+  background-color: #fff;
+  border: 2px solid #f0f0f0;
+}
+
+.back .inner {
+  -ms-grid-rows: 1fr 2fr 1fr 2fr 14fr 1fr 1fr;
+      grid-template-rows: 1fr 2fr 1fr 2fr 14fr 1fr 1fr;
+  -ms-grid-columns: (auto)[4];
+      grid-template-columns: repeat(4, auto);
+  grid-column-gap: 0.8em;
+  justify-items: center;
+}
+
+.back .info {
+  position: relative;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #4a5062;
+  -ms-grid-row: 3;
+  grid-row: 3;
+}
+
+.back .info:not(:first-of-type):before {
+  content: '';
+  position: absolute;
+  left: -0.9em;
+  height: 18px;
+  width: 1px;
+  background-color: #ccc;
+}
+
+.back .info span {
+  font-size: 2em;
+  font-weight: 700;
+}
+
+.back .info i {
+  font-size: 1.2em;
+}
+
+.back .info i:before {
+  background: -webkit-linear-gradient(50deg, #4a5062, #438af3);
+  background: -o-linear-gradient(50deg, #4a5062, #438af3);
+  background: linear-gradient(40deg, #4a5062, #438af3);
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+}
+
+.back .info .icon {
+  margin-left: 0.3em;
+}
+
+.back .info .icon span {
+  display: block;
+  margin-top: -0.25em;
+  font-size: 0.8em;
+  font-weight: 600;
+  white-space: nowrap;
+}
+
+.back .description {
+  -ms-grid-row: 5;
+  grid-row: 5;
+  grid-column: 1/-1;
+  font-size: 0.86em;
+  border-radius: 5px;
+  font-weight: 600;
+  line-height: 1.4em;
+  overflow: auto;
+  color: #4a5062;
+  padding-right: 10px;
+}
+
+.back .location,
+.back .price {
+  font-weight: 600;
+  color: #4a5062;
+  -ms-grid-row: 1;
+  grid-row: 1;
+  font-size: 0.86em;
+}
+
+.back .location {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1/3;
+  -ms-grid-column-align: left;
+      justify-self: left;
+}
+
+.back .price {
+  grid-column: 3/-1;
+  -ms-grid-column-align: right;
+      justify-self: right;
+}
+
+.back .button {
+  grid-column: 1/-1;
+  -ms-grid-column-align: center;
+      justify-self: center;
+}
+
+.button {
+  grid-row: -1;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: 600;
+  cursor: pointer;
+  display: block;
+  padding: 0 1.5em;
+  height: 3em;
+  line-height: 2.9em;
+  min-width: 3em;
+  background-color: transparent;
+  border: solid 2px #fff;
+  color: #fff;
+  border-radius: 4px;
+  text-align: center;
+  left: 50%;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+  -webkit-transition: 0.3s ease-in-out;
+  -o-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+  text-shadow: 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+.button:hover {
+  background-color: #fff;
+  -webkit-box-shadow: 0 0 50px rgba(0, 0, 0, 0.5);
+          box-shadow: 0 0 50px rgba(0, 0, 0, 0.5);
+  text-shadow: none;
+  color: #4a5062;
+}
+
+.button.return {
+  line-height: 3em;
+  color: #4a5062;
+  border-color: #4a5062;
+  text-shadow: none;
+}
+
+.button.return:hover {
+  background-color: #4a5062;
+  color: #fff;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #798199;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #4a5062;
+}
+
+section#professionalskill {
+  background-color: #2b2b39;
+}
+
+section#professionalskill h1 {
+  font-size: 40px;
+  line-height: 0.8em;
+  color: rgba(255, 255, 255, 0.2);
+  padding: 10px;
+}
+
+section#professionalskill p {
+  color: white;
+}
+
+section#professionalskill button:focus,
+section#professionalskill input:focus,
+section#professionalskill textarea:focus,
+section#professionalskill select:focus {
+  outline: none;
+}
+
+section#professionalskill .tabs {
+  display: block;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: 0;
+  overflow: hidden;
+}
+
+section#professionalskill .tabs [class^="tab"] label,
+section#professionalskill .tabs [class*=" tab"] label {
+  color: #efedef;
+  cursor: pointer;
+  display: block;
+  font-size: 1.1em;
+  font-weight: 300;
+  line-height: 1em;
+  padding: 2rem 0;
+  text-align: center;
+}
+
+section#professionalskill .tabs [class^="tab"] [type="radio"],
+section#professionalskill .tabs [class*=" tab"] [type="radio"] {
+  border-bottom: 1px solid rgba(239, 237, 239, 0.5);
+  cursor: pointer;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  display: block;
+  width: 100%;
+  -webkit-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+section#professionalskill .tabs [class^="tab"] [type="radio"]:hover, section#professionalskill .tabs [class^="tab"] [type="radio"]:focus,
+section#professionalskill .tabs [class*=" tab"] [type="radio"]:hover,
+section#professionalskill .tabs [class*=" tab"] [type="radio"]:focus {
+  border-bottom: 1px solid #fd264f;
+}
+
+section#professionalskill .tabs [class^="tab"] [type="radio"]:checked,
+section#professionalskill .tabs [class*=" tab"] [type="radio"]:checked {
+  border-bottom: 2px solid #fd264f;
+}
+
+section#professionalskill .tabs [class^="tab"] [type="radio"]:checked + div,
+section#professionalskill .tabs [class*=" tab"] [type="radio"]:checked + div {
+  opacity: 1;
+}
+
+section#professionalskill .tabs [class^="tab"] [type="radio"] + div,
+section#professionalskill .tabs [class*=" tab"] [type="radio"] + div {
+  display: block;
+  opacity: 0;
+  padding: 2rem 0;
+  width: 90%;
+  -webkit-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+section#professionalskill .tabs .tab-2 {
+  width: 20%;
+}
+
+section#professionalskill .tabs .tab-2 [type="radio"] + div {
+  width: 100%;
+  margin-left: 500%;
+}
+
+section#professionalskill .tabs .tab-2 [type="radio"]:checked + div {
+  margin-left: 0;
+}
+
+section#professionalskill .tabs .tab-2:nth-child(6n) [type="radio"] + div {
+  margin-left: 100%;
+}
+
+section#professionalskill .tabs .tab-2:nth-child(6n) [type="radio"]:checked + div {
+  margin-left: -100%;
+}
+
+@media (max-width: 568px) {
+  section#professionalskill .tabs .tab-2 {
+    width: 33%;
   }
 }
 /*# sourceMappingURL=index.css.map */
