--- a/style/layout.css
+++ b/style/layout.css
@@ -10,6 +10,10 @@ body {
   font-family: "微軟正黑體";
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .navbar {
   padding: 0 8px 0 0;
   position: fixed;
@@ -17,7 +21,7 @@ body {
   width: 100%;
 }
 
-nav #toggle {
+#toggle {
   width: 28px;
   height: 30px;
   margin: 10px auto;
@@ -26,7 +30,7 @@ nav #toggle {
   display: none;
 }
 
-nav #toggle div {
+#toggle div {
   width: 100%;
   height: 5px;
   background: white;
@@ -38,36 +42,36 @@ nav #toggle div {
           backface-visibility: hidden;
 }
 
-nav #toggle.on .one {
+#toggle.on .one {
   -webkit-transform: rotate(45deg) translate(5px, 5px);
       -ms-transform: rotate(45deg) translate(5px, 5px);
           transform: rotate(45deg) translate(5px, 5px);
 }
 
-nav #toggle.on .two {
+#toggle.on .two {
   opacity: 0;
 }
 
-nav #toggle.on .three {
+#toggle.on .three {
   -webkit-transform: rotate(-45deg) translate(7px, -8px);
       -ms-transform: rotate(-45deg) translate(7px, -8px);
           transform: rotate(-45deg) translate(7px, -8px);
 }
 
 @media (max-width: 992px) {
-  nav #toggle {
+  #toggle {
     display: block;
   }
-  nav .navbar-nav {
+  .navbar-nav {
     height: 100vh;
   }
 }
 
-nav .navbar-nav a {
+.navbar-nav a {
   font-size: 24px;
 }
 
-nav #navbarNav.show {
+#navbarNav.show {
   height: 100vh;
   -webkit-transition: .2s;
   -o-transition: .2s;
@@ -75,20 +79,20 @@ nav #navbarNav.show {
   -webkit-overflow-scrolling: touch;
 }
 
-nav .navbar-nav {
+.navbar-nav {
   margin: auto;
 }
 
-nav .navbar-nav li.nav-item {
+.navbar-nav li.nav-item {
   margin: 0 25px 0px 25px;
 }
 
-nav .navbar-nav li.nav-item a {
+.navbar-nav li.nav-item a {
   font-size: 24px;
   color: white;
 }
 
-nav .navbar-nav li.nav-item a p {
+.navbar-nav li.nav-item a p {
   color: white;
   margin-bottom: 0px;
   padding-bottom: 10px;
@@ -99,12 +103,12 @@ nav .navbar-nav li.nav-item a p {
   border-bottom: solid 2px #ffbf0e;
 }
 
-nav .navbar-nav li.nav-item a p:hover {
+.navbar-nav li.nav-item a p:hover {
   color: #ffbf0e;
   border-bottom: none;
 }
 
-nav .navbar-nav li.nav-item a p:after {
+.navbar-nav li.nav-item a p:after {
   content: '';
   position: absolute;
   bottom: -2px;
@@ -116,7 +120,7 @@ nav .navbar-nav li.nav-item a p:after {
   transition: 1s;
 }
 
-nav .navbar-nav li.nav-item a p:hover:after {
+.navbar-nav li.nav-item a p:hover:after {
   width: 100%;
 }
 /*# sourceMappingURL=layout.css.map */
