--- a/style/index.css
+++ b/style/index.css
@@ -168,6 +168,7 @@ section#aboutme #me-text > p::before {
 section#aboutme .PC_window {
   display: block;
   position: relative;
+  overflow: hidden;
 }
 
 section#aboutme .PC_window .A_inbox {
@@ -404,6 +405,10 @@ section#aboutme .Phone_window .A_inbox:hover:after {
   cursor: pointer;
 }
 
+section#Portfolio {
+  overflow: hidden;
+}
+
 section#Portfolio .Portfolio-title {
   background-color: #3a3a3a;
   width: 100%;
@@ -559,7 +564,7 @@ section#Portfolio #Portfolio-all .container .pic:hover {
   }
 }
 
-@media (max-width: 568px) {
+@media (max-width: 576px) {
   section#Portfolio #Portfolio-all .container .hug {
     min-height: 350px;
   }
@@ -581,7 +586,7 @@ section#Portfolio #Portfolio-all .container .pic:hover {
   }
 }
 
-@media (max-width: 568px) {
+@media (max-width: 576px) {
   section#Portfolio #Portfolio-all .container {
     padding: 0px 0px;
   }
@@ -612,6 +617,10 @@ section#Portfolio-ps h2 {
     margin: auto;
     margin-bottom: 30px;
   }
+}
+
+section#Portfolio-ps .container-fluid {
+  overflow: hidden;
 }
 
 section#Portfolio-ps .container-fluid .row .pic {
@@ -1069,25 +1078,9 @@ section#Portfolio-web .row .text .QRcode .teamQR {
           align-items: center;
 }
 
-@media (max-width: 568px) {
+@media (max-width: 576px) {
   #workexperiece .title {
-    width: 100%;
-    height: 100vh;
-    background-color: rgba(0, 0, 0, 0.4);
     font-size: 36px;
-    color: #f0c6c6;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-        -ms-flex-align: center;
-            align-items: center;
   }
 }
 
@@ -1424,6 +1417,47 @@ section#professionalskill {
   background-color: #2b2b39;
 }
 
+section#professionalskill .title {
+  width: 100%;
+  height: 100vh;
+  background-color: #3a3a3a;
+  font-size: 64px;
+  color: #f0c6c6;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@media (max-width: 576px) {
+  section#professionalskill .title {
+    width: 100%;
+    height: 100vh;
+    font-size: 36px;
+    color: #f0c6c6;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
 section#professionalskill h1 {
   font-size: 40px;
   line-height: 0.8em;
@@ -1432,6 +1466,7 @@ section#professionalskill h1 {
 }
 
 section#professionalskill p {
+  text-align: center;
   color: white;
 }
 
@@ -1461,7 +1496,7 @@ section#professionalskill .tabs [class*=" tab"] label {
   color: #efedef;
   cursor: pointer;
   display: block;
-  font-size: 1.1em;
+  font-size: 1.25em;
   font-weight: 300;
   line-height: 1em;
   padding: 2rem 0;
@@ -1485,12 +1520,12 @@ section#professionalskill .tabs [class*=" tab"] [type="radio"] {
 section#professionalskill .tabs [class^="tab"] [type="radio"]:hover, section#professionalskill .tabs [class^="tab"] [type="radio"]:focus,
 section#professionalskill .tabs [class*=" tab"] [type="radio"]:hover,
 section#professionalskill .tabs [class*=" tab"] [type="radio"]:focus {
-  border-bottom: 1px solid #fd264f;
+  border-bottom: 1px solid #ffbf0e;
 }
 
 section#professionalskill .tabs [class^="tab"] [type="radio"]:checked,
 section#professionalskill .tabs [class*=" tab"] [type="radio"]:checked {
-  border-bottom: 2px solid #fd264f;
+  border-bottom: 2px solid #ffbf0e;
 }
 
 section#professionalskill .tabs [class^="tab"] [type="radio"]:checked + div,
@@ -1530,7 +1565,7 @@ section#professionalskill .tabs .tab-2:nth-child(6n) [type="radio"]:checked + di
   margin-left: -100%;
 }
 
-@media (max-width: 568px) {
+@media (max-width: 576px) {
   section#professionalskill .tabs .tab-2 {
     width: 33%;
   }
