--- a/CSS/index.scss
+++ b/CSS/index.scss
@@ -1365,17 +1365,21 @@ section#Portfolio-web{
         height: 100vh;
         background-color: rgb(58, 58, 58);
 
-        font-size: 64px;
-        color: rgb(240, 198, 198);
+       
         display: flex;
         justify-content: center;
         align-items: center;
+        h1{
+            font-size: 64px;
+            color: rgb(240, 198, 198);
+        }
     }
     @media (max-width:576px) {
         .title{
           
-    
-            font-size: 36px;
+            h1{
+            font-size: 30px;
+            }
         
         }
         
@@ -1669,16 +1673,24 @@ $accent-color: #4a5062;
 
 // --------專業技能-特效-------
 section#professionalskill{
+    background-color: rgb(43, 43, 57);
     .title{
         width: 100%;
         height: 100vh;
         background-color: rgb(58, 58, 58);
 
-        font-size: 64px;
+        // font-size: 64px;
         color: rgb(240, 198, 198);
         display: flex;
         justify-content: center;
         align-items: center;
+        h1 {
+            font-size: 64px;
+            line-height: 0.8em;
+            color: rgb(240, 198, 198);
+            padding: 10px;
+        }
+        
     }
    
     @media (max-width:576px) {
@@ -1692,16 +1704,15 @@ section#professionalskill{
             display: flex;
             justify-content: center;
             align-items: center;
+            h1 {
+                font-size: 30px;
+                
+            }
         }
         
     }
-    background-color: rgb(43, 43, 57);
-    h1 {
-        font-size: 40px;
-        line-height: 0.8em;
-        color: rgba(255,255,255,0.2);
-        padding: 10px;
-    }
+    
+   
     
 
     p{
