--- a/style/index.css
+++ b/style/index.css
@@ -105,7 +105,7 @@ section#aboutme .abme-title {
   transition: 1s;
 }
 
-section#aboutme .abme-title h1 {
+section#aboutme h1 {
   height: 100%;
   font-size: 100px;
   color: #ffecec;
@@ -256,7 +256,7 @@ section#aboutme .Phone_window .A_inbox:hover:after {
 }
 
 @media (max-width: 720px) {
-  section#aboutme .abme-title h1 {
+  section#aboutme h1 {
     font-size: 48px;
   }
   section#aboutme #me-pic {
@@ -418,7 +418,7 @@ section#Portfolio .Portfolio-title {
   transition: 1s;
 }
 
-section#Portfolio .Portfolio-title h1 {
+section#Portfolio h1 {
   height: 100%;
   font-size: 100px;
   color: #ffecec;
@@ -437,7 +437,7 @@ section#Portfolio .Portfolio-title h1 {
 }
 
 @media (max-width: 720px) {
-  section#Portfolio .Portfolio-title h1 {
+  section#Portfolio h1 {
     font-size: 48px;
   }
 }
@@ -884,6 +884,17 @@ section#Portfolio-AI .swiper-slide img {
   width: 100%;
 }
 
+@media (max-width: 576px) {
+  section#Portfolio-AI {
+    padding-bottom: 0px;
+  }
+  section#Portfolio-AI .bgc-ai {
+    margin-top: 0px;
+    background-color: #e9b7b7;
+    padding-bottom: 50px;
+  }
+}
+
 section#Portfolio-web .bgc-web {
   background-color: #9b8888;
   padding-bottom: 100px;
@@ -1076,13 +1087,13 @@ section#Portfolio-web .row .text .QRcode .teamQR {
           align-items: center;
 }
 
-#workexperiece .title h1 {
+#workexperiece h1 {
   font-size: 64px;
   color: #f0c6c6;
 }
 
 @media (max-width: 576px) {
-  #workexperiece .title h1 {
+  #workexperiece h1 {
     font-size: 30px;
   }
 }
@@ -1439,7 +1450,7 @@ section#professionalskill .title {
           align-items: center;
 }
 
-section#professionalskill .title h1 {
+section#professionalskill h1 {
   font-size: 64px;
   line-height: 0.8em;
   color: #f0c6c6;
