--- a/CSS/index.scss
+++ b/CSS/index.scss
@@ -207,9 +207,9 @@ section#aboutme {
 
     // ---基本資料(按鈕)--------
     .PC_window{
-        display: block;
+        // display: block;
         position: relative;
-        overflow: hidden;
+        
         // a{ 
             
             .A_inbox{
